--- a/references.bib
+++ b/references.bib
@@ -38,7 +38,7 @@
   title  = {BNEF - strategic research provider for the energy transition},
   author = {BloombergNEF},
   url    = {https://about.bnef.com/},
-  year   = {2025},
+  year   = {2025}
 }
 
 @inproceedings{bresciani2025hybridization,
@@ -415,7 +415,7 @@
   title  = {Resolución de 11 de diciembre de 2019, del Ministerio para la Transición Ecológica, por la que se aprueban determinados procedimientos de operación para su adaptación al Real Decreto 244/2019, de 5 de abril, por el que se regulan las condiciones administrativas, técnicas y económicas del autoconsumo de energía eléctrica},
   author = {Ministerio para la Transición Ecológica},
   url    = {https://www.boe.es/eli/es/res/2019/12/11/(3)},
-  year   = {2019},
+  year   = {2019}
 }
 
 @misc{mterd2024orden,
@@ -430,7 +430,7 @@
   title  = {National Renewable Energy Laboratory - leading innovation in renewable energy systems},
   author = {National Renewable Energy Laboratory},
   url    = {https://www.nrel.gov/},
-  year   = {2025},
+  year   = {2025}
 }
 
 @misc{omie2025acceso,
@@ -467,7 +467,7 @@
   title  = {Reglas de funcionamiento del mercado diario e intradiario de electricidad},
   author = {OMIE},
   url    = {https://www.omie.es/sites/default/files/2024-03/Anexo%20I_Propuesta%20de%20Reglas%20IDA%20tras%20consulta%20con%20control%20de%20cambios.pdf},
-  year   = {2024},
+  year   = {2024}
 }
 
 @inproceedings{parlikar2019topology,
@@ -537,6 +537,14 @@
   author = {Spiller, Matteo},
   year   = {2020},
   school = {Politecnico di Milano}
+}
+
+@misc{streamlit2025faster,
+  title  = {A faster way to build and share data apps},
+  author = {Streamlit},
+  url    = {https://streamlit.io/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
 }
 
 @misc{sunkko2025two,
