--- a/references.bib
+++ b/references.bib
@@ -433,6 +433,14 @@
   year   = {2025}
 }
 
+@misc{nord2025leading,
+  title  = {The world's first multinational power exchange, promoting transparent and efficient pan-European energy trading},
+  author = {Nord Pool},
+  url    = {https://www.nordpoolgroup.com/en/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
+}
+
 @misc{omie2025acceso,
   title  = {Acceso a ficheros},
   author = {OMIE},
