--- a/principal.tex
+++ b/principal.tex
@@ -78,14 +78,14 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-% \input{chapter1.tex}
-% \input{chapter2.tex}
-% \input{chapter3.tex}
-% \input{chapter4.tex}
+\input{chapter1.tex}
+\input{chapter2.tex}
+\input{chapter3.tex}
+\input{chapter4.tex}
 \input{chapter5.tex}
-% \input{chapter6.tex}
-% \input{chapter7.tex}
-% \input{chapter8.tex}
+\input{chapter6.tex}
+\input{chapter7.tex}
+\input{chapter8.tex}
 
 \nocite{*}
 \bibliographystyle{styles/plain}
